--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,15 @@
-ipykernel==6.29.5
-ipython==8.26.0
-ipywidgets==8.1.3
-jupyter-events==0.10.0
-jupyter-lsp==2.2.5
-jupyter_client==8.6.2
-jupyter_core==5.7.2
-jupyter_server==2.14.1
-jupyter_server_terminals==0.5.3
-jupyterlab==4.2.3
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.2
-jupyterlab_widgets==3.0.11
-kaleido==0.2.1
-matplotlib==3.9.1
-matplotlib-inline==0.1.7
-numpy==2.0.0
-pandas==2.2.2
-plotly==5.22.0
-plotly-express==0.4.1
-scikit-learn==1.5.1
-scipy==1.14.0
+ipykernel
+ipython
+ipywidgets
+jupyterlab
+jupyterlab_widgets
+kaleido
+matplotlib
+matplotlib-inline
+numpy
+pandas
+plotly
+plotly-express
+scikit-learn
+scipy
 
